--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,2 +1,22 @@
-<%= link_to 'Strona główna', root_path %>
-<%= link_to 'O mnie', home_about_path %>
+
+
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data- 6 toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-band" href="#">ZajeApka</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><%= link_to 'Strona główna', root_path %></li>
+                <li><%= link_to 'O mnie', home_about_path %></li>
+            </ul>
+        </div>
+    </div>
+</nav>
