--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -10,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-band" href="#">ZajeApka</a>
+            <%= link_to 'ZajeApka', root_path, class: 'navbar-brand' %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
