finishing touches on css

--- a/app/assets/stylesheets/bootstraply.css.scss
+++ b/app/assets/stylesheets/bootstraply.css.scss
@@ -1,5 +1,9 @@
 $jumbotron-bg: #F0F8FF;
-$navbar-default-bg: #273547;
+
+$navbar-default-bg: #343547;
+$navbar-default-link-hover-color: #333;
+$navbar-default-link-hover-bg: lightgrey;
+
 $body-bg: #e2e0e1;
 
 
