--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle-collapsed" data- 6 toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data- 6 
+                    toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -9,11 +11,13 @@
             </button>
             <%= link_to 'ZajeApka', root_path, class: 'navbar-brand' %>
         </div>
+        
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to 'Strona główna', root_path %></li>
                 <li><%= link_to 'O mnie', home_about_path %></li>
             </ul>
-        </div>
-    </div>
+        </div> <!-- /.navbar-collapse -->
+    </div> <!-- /.container-fluid -->
 </nav>
