trying to fix Heroku logout issue

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
     <h1>Abołt Mi</h1>
-    <p>Nazywam się Paweł i jestem autorej tej Zajefajnej Aplikacji.</p>
+    <p>Mam na imię Paweł i jestem autorej tej Zajefajnej Aplikacji.</p>
 </div>
