production.rb <- config.serve_static_assets = true

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,7 +19,7 @@
                 <li><%= link_to 'O mnie', home_about_path %></li>
                 <% if user_signed_in? %>
                     <li><%= link_to 'Edycja profilu', edit_user_registration_path %></li>
-                    <li><%= link_to 'Wylogowanie', destroy_user_session_path, :method=>'delete' %></li>
+                    <li><%= link_to 'Wylogowanie', destroy_user_session_path, method: :delete %></li>
                 <% else %>
                     <li><%= link_to 'Logowanie', new_user_session_path %></li>
                     <li><%= link_to 'Rejestracja', new_user_registration_path %></li>
