--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -17,7 +17,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to 'Strona główna', root_path %></li>
                 <li><%= link_to 'O mnie', home_about_path %></li>
+                <li><%= link_to 'Lista pinów', pins_path %></li>
                 <% if user_signed_in? %>
+                    <li><%= link_to 'Nowy pin', new_pin_path %></li>
                     <li><%= link_to 'Edycja profilu', edit_user_registration_path %></li>
                     <li><%= link_to 'Wylogowanie', '/users/sign_out' , :method => :delete %></li>
                 <% else %>
